test/language/errors/errors_undefined.hm
# @exception undefined global 'let'

let foo = 1
let bar = 2

func nothing(a) {
  return a
}
